src/HexDLParser.output
Grammar

    0 $accept: dlatoms $end

    1 dlatoms: /* empty */
    2        | dlatoms dlatom SENTINEL

    3 dlatom: DLATOM '[' dlquery ']' output
    4       | DLATOM '[' ops ';' dlquery ']' output
    5       | DLATOM '[' cq ']' output
    6       | DLATOM '[' ops ';' cq ']' output
    7       | DLATOM '[' ucq ']' output
    8       | DLATOM '[' ops ';' ucq ']' output
    9       | CQATOM '[' terms ']' output
   10       | UCQATOM '[' terms ']' output
   11       | DLEXTATOM '[' terms ']' output

   12 dlquery: STRING
   13        | '-' STRING

   14 atom: dlquery '(' term ')'
   15     | dlquery '(' term ',' term ')'

   16 cq: atom
   17   | cq ',' atom

   18 ucq: cq 'v' cq
   19    | ucq 'v' cq

   20 output: /* empty */
   21       | '(' ')'
   22       | '(' terms ')'

   23 terms: term
   24      | terms ',' term

   25 term: STRING
   26     | NUMBER
   27     | '_'

   28 ops: op
   29    | ops ',' op

   30 op: STRING PMOP STRING


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 15 21 22
')' (41) 14 15 21 22
',' (44) 15 17 24 29
'-' (45) 13
';' (59) 4 6 8
'[' (91) 3 4 5 6 7 8 9 10 11
']' (93) 3 4 5 6 7 8 9 10 11
'_' (95) 27
'v' (118) 18 19
error (256)
SENTINEL (258) 2
PMOP (259) 30
STRING (260) 12 13 25 30
DLEXTATOM (261) 11
NUMBER (262) 26
DLATOM (263) 3 4 5 6 7 8
CQATOM (264) 9
UCQATOM (265) 10


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
dlatoms (21)
    on left: 1 2, on right: 0 2
dlatom (22)
    on left: 3 4 5 6 7 8 9 10 11, on right: 2
dlquery (23)
    on left: 12 13, on right: 3 4 14 15
atom (24)
    on left: 14 15, on right: 16 17
cq (25)
    on left: 16 17, on right: 5 6 17 18 19
ucq (26)
    on left: 18 19, on right: 7 8 19
output (27)
    on left: 20 21 22, on right: 3 4 5 6 7 8 9 10 11
terms (28)
    on left: 23 24, on right: 9 10 11 22 24
term (29)
    on left: 25 26 27, on right: 14 15 23 24
ops (30)
    on left: 28 29, on right: 4 6 8 29
op (31)
    on left: 30, on right: 28 29


state 0

    0 $accept: . dlatoms $end

    $default  reduce using rule 1 (dlatoms)

    dlatoms  go to state 1


state 1

    0 $accept: dlatoms . $end
    2 dlatoms: dlatoms . dlatom SENTINEL

    $end       shift, and go to state 2
    DLEXTATOM  shift, and go to state 3
    DLATOM     shift, and go to state 4
    CQATOM     shift, and go to state 5
    UCQATOM    shift, and go to state 6

    dlatom  go to state 7


state 2

    0 $accept: dlatoms $end .

    $default  accept


state 3

   11 dlatom: DLEXTATOM . '[' terms ']' output

    '['  shift, and go to state 8


state 4

    3 dlatom: DLATOM . '[' dlquery ']' output
    4       | DLATOM . '[' ops ';' dlquery ']' output
    5       | DLATOM . '[' cq ']' output
    6       | DLATOM . '[' ops ';' cq ']' output
    7       | DLATOM . '[' ucq ']' output
    8       | DLATOM . '[' ops ';' ucq ']' output

    '['  shift, and go to state 9


state 5

    9 dlatom: CQATOM . '[' terms ']' output

    '['  shift, and go to state 10


state 6

   10 dlatom: UCQATOM . '[' terms ']' output

    '['  shift, and go to state 11


state 7

    2 dlatoms: dlatoms dlatom . SENTINEL

    SENTINEL  shift, and go to state 12


state 8

   11 dlatom: DLEXTATOM '[' . terms ']' output

    STRING  shift, and go to state 13
    NUMBER  shift, and go to state 14
    '_'     shift, and go to state 15

    terms  go to state 16
    term   go to state 17


state 9

    3 dlatom: DLATOM '[' . dlquery ']' output
    4       | DLATOM '[' . ops ';' dlquery ']' output
    5       | DLATOM '[' . cq ']' output
    6       | DLATOM '[' . ops ';' cq ']' output
    7       | DLATOM '[' . ucq ']' output
    8       | DLATOM '[' . ops ';' ucq ']' output

    STRING  shift, and go to state 18
    '-'     shift, and go to state 19

    dlquery  go to state 20
    atom     go to state 21
    cq       go to state 22
    ucq      go to state 23
    ops      go to state 24
    op       go to state 25


state 10

    9 dlatom: CQATOM '[' . terms ']' output

    STRING  shift, and go to state 13
    NUMBER  shift, and go to state 14
    '_'     shift, and go to state 15

    terms  go to state 26
    term   go to state 17


state 11

   10 dlatom: UCQATOM '[' . terms ']' output

    STRING  shift, and go to state 13
    NUMBER  shift, and go to state 14
    '_'     shift, and go to state 15

    terms  go to state 27
    term   go to state 17


state 12

    2 dlatoms: dlatoms dlatom SENTINEL .

    $default  reduce using rule 2 (dlatoms)


state 13

   25 term: STRING .

    $default  reduce using rule 25 (term)


state 14

   26 term: NUMBER .

    $default  reduce using rule 26 (term)


state 15

   27 term: '_' .

    $default  reduce using rule 27 (term)


state 16

   11 dlatom: DLEXTATOM '[' terms . ']' output
   24 terms: terms . ',' term

    ']'  shift, and go to state 28
    ','  shift, and go to state 29


state 17

   23 terms: term .

    $default  reduce using rule 23 (terms)


state 18

   12 dlquery: STRING .
   30 op: STRING . PMOP STRING

    PMOP  shift, and go to state 30

    $default  reduce using rule 12 (dlquery)


state 19

   13 dlquery: '-' . STRING

    STRING  shift, and go to state 31


state 20

    3 dlatom: DLATOM '[' dlquery . ']' output
   14 atom: dlquery . '(' term ')'
   15     | dlquery . '(' term ',' term ')'

    ']'  shift, and go to state 32
    '('  shift, and go to state 33


state 21

   16 cq: atom .

    $default  reduce using rule 16 (cq)


state 22

    5 dlatom: DLATOM '[' cq . ']' output
   17 cq: cq . ',' atom
   18 ucq: cq . 'v' cq

    ']'  shift, and go to state 34
    ','  shift, and go to state 35
    'v'  shift, and go to state 36


state 23

    7 dlatom: DLATOM '[' ucq . ']' output
   19 ucq: ucq . 'v' cq

    ']'  shift, and go to state 37
    'v'  shift, and go to state 38


state 24

    4 dlatom: DLATOM '[' ops . ';' dlquery ']' output
    6       | DLATOM '[' ops . ';' cq ']' output
    8       | DLATOM '[' ops . ';' ucq ']' output
   29 ops: ops . ',' op

    ';'  shift, and go to state 39
    ','  shift, and go to state 40


state 25

   28 ops: op .

    $default  reduce using rule 28 (ops)


state 26

    9 dlatom: CQATOM '[' terms . ']' output
   24 terms: terms . ',' term

    ']'  shift, and go to state 41
    ','  shift, and go to state 29


state 27

   10 dlatom: UCQATOM '[' terms . ']' output
   24 terms: terms . ',' term

    ']'  shift, and go to state 42
    ','  shift, and go to state 29


state 28

   11 dlatom: DLEXTATOM '[' terms ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 44


state 29

   24 terms: terms ',' . term

    STRING  shift, and go to state 13
    NUMBER  shift, and go to state 14
    '_'     shift, and go to state 15

    term  go to state 45


state 30

   30 op: STRING PMOP . STRING

    STRING  shift, and go to state 46


state 31

   13 dlquery: '-' STRING .

    $default  reduce using rule 13 (dlquery)


state 32

    3 dlatom: DLATOM '[' dlquery ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 47


state 33

   14 atom: dlquery '(' . term ')'
   15     | dlquery '(' . term ',' term ')'

    STRING  shift, and go to state 13
    NUMBER  shift, and go to state 14
    '_'     shift, and go to state 15

    term  go to state 48


state 34

    5 dlatom: DLATOM '[' cq ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 49


state 35

   17 cq: cq ',' . atom

    STRING  shift, and go to state 50
    '-'     shift, and go to state 19

    dlquery  go to state 51
    atom     go to state 52


state 36

   18 ucq: cq 'v' . cq

    STRING  shift, and go to state 50
    '-'     shift, and go to state 19

    dlquery  go to state 51
    atom     go to state 21
    cq       go to state 53


state 37

    7 dlatom: DLATOM '[' ucq ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 54


state 38

   19 ucq: ucq 'v' . cq

    STRING  shift, and go to state 50
    '-'     shift, and go to state 19

    dlquery  go to state 51
    atom     go to state 21
    cq       go to state 55


state 39

    4 dlatom: DLATOM '[' ops ';' . dlquery ']' output
    6       | DLATOM '[' ops ';' . cq ']' output
    8       | DLATOM '[' ops ';' . ucq ']' output

    STRING  shift, and go to state 50
    '-'     shift, and go to state 19

    dlquery  go to state 56
    atom     go to state 21
    cq       go to state 57
    ucq      go to state 58


state 40

   29 ops: ops ',' . op

    STRING  shift, and go to state 59

    op  go to state 60


state 41

    9 dlatom: CQATOM '[' terms ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 61


state 42

   10 dlatom: UCQATOM '[' terms ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 62


state 43

   21 output: '(' . ')'
   22       | '(' . terms ')'

    STRING  shift, and go to state 13
    NUMBER  shift, and go to state 14
    ')'     shift, and go to state 63
    '_'     shift, and go to state 15

    terms  go to state 64
    term   go to state 17


state 44

   11 dlatom: DLEXTATOM '[' terms ']' output .

    $default  reduce using rule 11 (dlatom)


state 45

   24 terms: terms ',' term .

    $default  reduce using rule 24 (terms)


state 46

   30 op: STRING PMOP STRING .

    $default  reduce using rule 30 (op)


state 47

    3 dlatom: DLATOM '[' dlquery ']' output .

    $default  reduce using rule 3 (dlatom)


state 48

   14 atom: dlquery '(' term . ')'
   15     | dlquery '(' term . ',' term ')'

    ')'  shift, and go to state 65
    ','  shift, and go to state 66


state 49

    5 dlatom: DLATOM '[' cq ']' output .

    $default  reduce using rule 5 (dlatom)


state 50

   12 dlquery: STRING .

    $default  reduce using rule 12 (dlquery)


state 51

   14 atom: dlquery . '(' term ')'
   15     | dlquery . '(' term ',' term ')'

    '('  shift, and go to state 33


state 52

   17 cq: cq ',' atom .

    $default  reduce using rule 17 (cq)


state 53

   17 cq: cq . ',' atom
   18 ucq: cq 'v' cq .

    ','  shift, and go to state 35

    $default  reduce using rule 18 (ucq)


state 54

    7 dlatom: DLATOM '[' ucq ']' output .

    $default  reduce using rule 7 (dlatom)


state 55

   17 cq: cq . ',' atom
   19 ucq: ucq 'v' cq .

    ','  shift, and go to state 35

    $default  reduce using rule 19 (ucq)


state 56

    4 dlatom: DLATOM '[' ops ';' dlquery . ']' output
   14 atom: dlquery . '(' term ')'
   15     | dlquery . '(' term ',' term ')'

    ']'  shift, and go to state 67
    '('  shift, and go to state 33


state 57

    6 dlatom: DLATOM '[' ops ';' cq . ']' output
   17 cq: cq . ',' atom
   18 ucq: cq . 'v' cq

    ']'  shift, and go to state 68
    ','  shift, and go to state 35
    'v'  shift, and go to state 36


state 58

    8 dlatom: DLATOM '[' ops ';' ucq . ']' output
   19 ucq: ucq . 'v' cq

    ']'  shift, and go to state 69
    'v'  shift, and go to state 38


state 59

   30 op: STRING . PMOP STRING

    PMOP  shift, and go to state 30


state 60

   29 ops: ops ',' op .

    $default  reduce using rule 29 (ops)


state 61

    9 dlatom: CQATOM '[' terms ']' output .

    $default  reduce using rule 9 (dlatom)


state 62

   10 dlatom: UCQATOM '[' terms ']' output .

    $default  reduce using rule 10 (dlatom)


state 63

   21 output: '(' ')' .

    $default  reduce using rule 21 (output)


state 64

   22 output: '(' terms . ')'
   24 terms: terms . ',' term

    ')'  shift, and go to state 70
    ','  shift, and go to state 29


state 65

   14 atom: dlquery '(' term ')' .

    $default  reduce using rule 14 (atom)


state 66

   15 atom: dlquery '(' term ',' . term ')'

    STRING  shift, and go to state 13
    NUMBER  shift, and go to state 14
    '_'     shift, and go to state 15

    term  go to state 71


state 67

    4 dlatom: DLATOM '[' ops ';' dlquery ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 72


state 68

    6 dlatom: DLATOM '[' ops ';' cq ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 73


state 69

    8 dlatom: DLATOM '[' ops ';' ucq ']' . output

    '('  shift, and go to state 43

    $default  reduce using rule 20 (output)

    output  go to state 74


state 70

   22 output: '(' terms ')' .

    $default  reduce using rule 22 (output)


state 71

   15 atom: dlquery '(' term ',' term . ')'

    ')'  shift, and go to state 75


state 72

    4 dlatom: DLATOM '[' ops ';' dlquery ']' output .

    $default  reduce using rule 4 (dlatom)


state 73

    6 dlatom: DLATOM '[' ops ';' cq ']' output .

    $default  reduce using rule 6 (dlatom)


state 74

    8 dlatom: DLATOM '[' ops ';' ucq ']' output .

    $default  reduce using rule 8 (dlatom)


state 75

   15 atom: dlquery '(' term ',' term ')' .

    $default  reduce using rule 15 (atom)
